--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
             <!-- BrowserStack Automate -->
             <plugin>
                 <groupId>com.browserstack</groupId>
